# jtlutil

./: Makefile  pyproject.toml
src/jtlutil/: config.py
src/jtlutil/docker/: __init__.py  db.py  dctl.py  manager.py  proc.py
src/jtlutil/flask/: flaskapp.py
test/: dev.ipynb  test_config.py  test_docker_db.ipynb  test_proc.ipynb
test/config/: swarm.env
