[project]
name = "jtlutil"
version = "0.1.0"
description = "Support routines for League infrastructure"
readme = "README.md"
authors = [
    { name = "Eric Busboom", email = "eric@civicknowledge.com" }
]
requires-python = ">=3.11"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
